# AWSIM-Labs-with-prediction-launch-pkg

./: .gitignore  CMakeLists.txt  README.md
AWSIM-Labs-with-prediction-launch/: package.xml
AWSIM-Labs-with-prediction-launch/launch/: awsim-labs-with-prediction.launch.py
src/launch/: awsim-labs-with-prediction.launch.py  package.xml
src/map-module/map_loader/: CMakeLists.txt  package.xml
src/map-module/map_loader/launch/: lanelet2_map_loader.launch.xml  pointcloud_map_loader.launch.xml
src/map-module/map_projection_loader/: CMakeLists.txt  package.xml
src/map-module/map_projection_loader/launch/: map_projection_loader.launch.xml
src/prediction-module/map_based_prediction/: CMakeLists.txt  package.xml
src/prediction-module/map_based_prediction/launch/: map_based_prediction.launch.xml
